deat: add docker compose
